# pyfyre

./: .gitattributes  .gitignore  AUTHORS  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __main__.py  dev.py  dev_requirements.txt  index.html  liveserver.py  mypy.ini  pynani.py  release.py  requirements.txt  server.py  settings.py  settings.yaml  setup.cfg  setup.py  update_docs.py
.github/: FUNDING.yml
.github/workflows/: mypy.yaml  python-publish.yaml
browser/: __init__.py
cli/: __init__.py  create_app.py
cli/outputs/: help.txt
core/: pyfyre.py  pynani.py  starter.html  widgets.py
core/ajax/: __init__.py
core/js/: index.js
core/public/: index.html
core/user/: README.md  manager.py
core/widgets/: __init__.py
demo/counter-app/: build.py  settings.yaml
demo/pyfyre-routing/: build.py  settings.py
demo/random-string-generator/: settings.py
demo/todo-app/: index.html
docs/: README.md  build.py  conf.py  dev.py  index.html  index.rst  netlify.toml  pyfyre.py  requirements.txt  settings.yaml
docs/pyf-modules/: pyfyre.py
docs/pyf_modules/: pyfyre.brython.js
docs/source/: conf.py  help.rst  index.rst  modules.rst  pyfyre.nodes.rst  pyfyre.presets.rst  pyfyre.rst  quickstart.rst
docs/src/: __init__.py  main.py
examples/ajax-example/: index.html
examples/counter-app/: .gitignore  README.md  index.html
examples/counterapp/: index.html  settings.yaml
examples/hello_world/: main.py
examples/pyfyre-ajax/: README.md  index.html  settings.py
examples/pyfyre-routing/: __init__.py
examples/routing-example/: README.md  index.html  pyfyre.py  settings.yaml
examples/the_endless_containers/: README.md
examples/todo-app/: .gitignore  README.md  settings.py  template.html
examples/user_list/: main.py
interpreter/: __init__.py
javascript/: __init__.py
libs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
libs/core/: pynani.py
libs/docs/: conf.py
pyfyre/: __init__.py  decorators.py  events.py  exceptions.py  noderef.py  pyfyre.brython.js  pyfyre.py  router.py  states.py  styles.py  utils.py  virtual_dom.py  widgets.py
pyfyre/ajax/: __init__.py
pyfyre/core/: __init__.py  exceptions.py  initializeEnvironment.py
pyfyre/globals/: __init__.py  events.py
pyfyre/management/: __init__.py
pyfyre/nodes/: __init__.py  base.py  buttons.py  containers.py  futures.py  images.py  inputs.py  links.py  lists.py  misc.py  texts.py  widgets.py
pyfyre/presets/: __init__.py  errors.py  loading.py
pyfyre/router/: __init__.py
pyfyre/runtime_dom/: __init__.py  diff.py  render.py
pyfyre/runtimedom/: diff.py
pyfyre/user/: .gitignore  (+5 more)
pyfyre_cli/: __init__.py  build_app.py  create_app.py  run_app.py  utils.py  web_app.py
src/: main.py
user/: index.html  pyfyre.py
web/: README.md  netlify.toml  requirements.txt  settings.py  settings.yaml
(+166 files in other folders)
