[metadata]
name = pyfyre
version = 1.0.5
url = https://pyfyre.netlify.app
author = Koowentu Technology
author_email = koowentu@gmail.com
description = A Web Frontend Framework for building reactive static UI on the web using Python.
long_description = file: README.md
long_description_content_type=text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://pyfyre.netlify.app/docs/
    Source = https://github.com/pyfyre/pyfyre

[options]
python_requires = >=3.8
packages = find:
include_package_data = false
zip_safe = false
setup_requires =
    setuptools
install_requires =
    brython
    livereload

[options.package_data]
* = *.html, *.md, *.yaml, *.css

[options.entry_points]
console_scripts =
    pyfyre = pyfyre.management:execute_from_command_line